Add fundations/06 solution

--- a/foundations/06-cascade-fix/style.css
+++ b/foundations/06-cascade-fix/style.css
@@ -3,7 +3,7 @@
   color: hsl(0, 100%, 50%);
 }
 
-.small-para {
+p.small-para {
   font-size: 12px;
 }
 
@@ -11,7 +11,7 @@
   font-size: 22px;
 }
 
-.confirm {
+#confirm-button {
   background: green;
   color: white;
   font-size: 20px;
@@ -29,7 +29,7 @@
   font-size: 14px;
 }
 
-div.text {
+div {
   color: green;
   font-size: 28px;
 }
