--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -64,3 +64,24 @@ button.cancel {
   border: 1px solid #ddd;
   color: royalblue;
 }
+
+.modal {
+  padding: 14px;
+  display: flex;
+  gap: 20px;
+}
+
+.header {
+  font-weight: bold;
+  font-size: larger;
+}
+
+.one {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 10px;
+}
+
+.text {
+  margin-bottom: 10px;
+}
