--- a/grid/03-grid-layout-3/style.css
+++ b/grid/03-grid-layout-3/style.css
@@ -5,6 +5,14 @@
 
 .container {
   text-align: center;
+  display: grid;
+  gap: 15px;
+  grid-template-columns: 1fr 4fr;
+  grid-template-areas:
+  "header header"
+  "sidebar nav"
+  "sidebar article"
+  "footer footer";
 }
 
 .container div {
@@ -17,6 +25,7 @@
 
 .header {
   background-color: #393f4d;
+  grid-area: header;
 }
 
 .menu ul,
@@ -26,6 +35,7 @@
 
 .sidebar {
   background-color: #FF7755;
+  grid-area: sidebar;
 }
 
 .sidebar .photo {
@@ -46,6 +56,7 @@
 
 .nav {
   background-color: #FF7755;
+  grid-area: nav;
 }
 
 .nav ul li {
@@ -55,6 +66,7 @@
 
 .article {
   background-color: #bccbde;
+  grid-area: article;
 }
 
 .article p {
@@ -83,9 +95,10 @@
 
 .footer {
   background-color: #393f4d;
+  grid-area: footer;
 }
 
 .footer p {
   font-size: 13px;
-  font-weight: normal;  
+  font-weight: normal;
 }
