--- a/animation/02-pop-up/style.css
+++ b/animation/02-pop-up/style.css
@@ -32,13 +32,14 @@ button {
   border: 1px solid black;
   border-radius: 10px;
   position: fixed;
-  top: 50%;
+  top: 40%;
   left: 50%;
   transform-origin: center;
   transform: translate(-50%, -50%);
   pointer-events: none;
   opacity: 0%;
   text-align: center;
+  transition: opacity 0.2s, top 0.2s;
 }
 .popup-modal p {
   margin-bottom: 24px
@@ -55,9 +56,9 @@ button {
 .popup-modal.show {
   opacity: 100%;
   pointer-events: all;
+  top: 50%;
 }
 
 .backdrop.show {
   opacity: 30%;
 }
-
